# lever-framework-cutter

./: README.md  cookiecutter.json
lever-{{cookiecutter.language_slug}}/language-server-{{cookiecutter.language_slug}}/: Cargo.toml
lever-{{cookiecutter.language_slug}}/language-server-{{cookiecutter.language_slug}}/language_def/: rules.ron
lever-{{cookiecutter.language_slug}}/language-server-{{cookiecutter.language_slug}}/src/: main.rs
lever-{{cookiecutter.language_slug}}/tree-sitter-{{cookiecutter.language_slug}}/: grammar.js  package.json
lever-{{cookiecutter.language_slug}}/vscode-lever-{{cookiecutter.language_slug}}/: README.md  package.json
lever-{{cookiecutter.language_slug}}/vscode-lever-{{cookiecutter.language_slug}}/client/: package.json
lever-{{cookiecutter.language_slug}}/vscode-lever-{{cookiecutter.language_slug}}/client/src/: extension.ts
noname-{{cookiecutter.language_slug}}/tree-sitter-{{cookiecutter.language_slug}}/: grammar.js
noname-{{cookiecutter.language_slug}}/vscode-noname-{{cookiecutter.language_slug}}/: README.md  package.json
noname-{{cookiecutter.language_slug}}/vscode-noname-{{cookiecutter.language_slug}}/client/: package.json
noname-{{cookiecutter.language_slug}}/vscode-noname-{{cookiecutter.language_slug}}/docs/: DevGuide.md
noname-{{cookiecutter.language_slug}}/{{cookiecutter.language_slug}}-language-server/: Cargo.toml
noname-{{cookiecutter.language_slug}}/{{cookiecutter.language_slug}}-language-server/language_def/: rules.ron
(+1 files in other folders)
